Update least squares ex to include 2nd derivative test

--- a/2_Partial_Derivatives/A_Functions_of_2_Variables_Tangent_Approximation_Optimization/S29_Least_Squares/linefitting.ipynb
+++ b/2_Partial_Derivatives/A_Functions_of_2_Variables_Tangent_Approximation_Optimization/S29_Least_Squares/linefitting.ipynb
@@ -414,10 +414,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Note: proving critical point is a minimum \n",
+    "\n",
+    "Note that not every critical point is a minimum. To prove that the calculated values of a and b are a (local) minimum, we use the second derivative test. \n",
+    "\n",
+    "\\begin{align}\n",
+    "A &= \\frac{\\partial^2 D}{\\partial a^2} \\\\\n",
+    "B &= \\frac{\\partial^2 D}{\\partial a \\partial b} = \\frac{\\partial^2 D}{\\partial b \\partial a} \\\\\n",
+    "C &= \\frac{\\partial^2 D}{\\partial b^2} \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "(a,b) are a local minimum if $AC - B^2 > 0$ and $A > 0$.\n",
+    "\n",
+    "\\begin{align}\n",
+    "A &= \\frac{\\partial^2 D}{\\partial a^2}\\\\\n",
+    "  &= \\frac{\\partial D}{\\partial a} \\frac{\\partial D}{\\partial a} \\\\\n",
+    "                                   &= \\frac{\\partial D}{\\partial a}  [-\\sum_{i=1}^n (y_i x_i) + \\sum_{i=1}^n(ax_i^2) + \\sum_{i=1}^n(bx_i)]\\\\\n",
+    "                                   &=  \\sum_{i=1}^n(x_i^2) \\\\\n",
+    "\\\\\n",
+    "B &= \\frac{\\partial^2 D}{\\partial b^2}\\\\\n",
+    "  &= \\frac{\\partial D}{\\partial a} \\frac{\\partial D}{\\partial b} \\\\\n",
+    "                                   &= \\frac{\\partial D}{\\partial b}  [-\\sum_{i=1}^n (y_i) + \\sum_{i=1}^n(ax_i) + nb ]\\\\\n",
+    "                                   &= \\sum_{i=1}^n(x_i)\\\\\n",
+    "\\\\\n",
+    "C &= \\frac{\\partial^2 D}{\\partial b^2}\\\\\n",
+    "  &= \\frac{\\partial D}{\\partial b} \\frac{\\partial D}{\\partial b} \\\\\n",
+    "                                   &= \\frac{\\partial D}{\\partial b}  [-\\sum_{i=1}^n (y_i) + \\sum_{i=1}^n(ax_i) + nb ]\\\\\n",
+    "                                   &=  n = 50 \\\\\n",
+    "\\\\\n",
+    "AC - B^2 &= 50(\\sum_{i=1}^n(x_i^2) ) - (\\sum_{i=1}^n(x_i))^2 > 0      \\\\\n",
+    "\\\\\n",
+    "A &= \\sum_{i=1}^n(x_i^2) > 0\n",
+    "\\end{align}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
